// Vitest Snapshot v1

exports[`evaluate > Should list rules 1`] = `
{
  "rules": {
    "nodeKind": "rule",
    "rawNode": {
      "formule": "42",
      "nom": "rules",
    },
    "replacements": [],
    "suggestions": {},
    "title": "Rules",
  },
}
`;

exports[`evaluate > Should return an error 1`] = `
{
  "error": {
    "message": "La règle 'bad rules' n'existe pas",
  },
}
`;

exports[`evaluate > Should return rules data 1`] = `
{
  "nodeKind": "rule",
  "rawNode": {
    "formule": "42",
    "nom": "rules",
  },
  "suggestions": {},
  "title": "Rules",
}
`;
